--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,139 @@
+absl-py==2.1.0
+annotated-types==0.7.0
+anyio==4.2.0
+appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1707233003401/work
+arel==0.3.0
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+async-asgi-testclient==1.4.11
+attrs==23.2.0
+beautifulsoup4==4.12.3
+bidict==0.23.1
+black==24.4.2
+bleach==6.1.0
+bs4==0.0.2
+cacheout==0.14.1
+cachetools==4.2.4
+certifi==2024.6.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+contourpy==1.2.1
+cycler==0.12.1
+debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1707444494422/work
+decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+distinctipy==1.3.4
+dlib==19.24.4
+exceptiongroup @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_b2258scr33/croot/exceptiongroup_1706031391815/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
+fastapi==0.109.0
+ffmpeg-python==0.2.0
+flatbuffers==24.3.25
+fonttools==4.53.0
+future==1.0.0
+gitdb==4.0.11
+GitPython==3.1.43
+giturlparse==0.12.0
+h11==0.14.0
+httptools==0.6.1
+icrawler==0.6.9
+idna==3.7
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1719171233697/work
+imutils==0.5.4
+ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1717717537056/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1717182742060/work
+isort==5.13.2
+jax==0.4.30
+jaxlib==0.4.30
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+Jinja2==3.1.4
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1716472197302/work
+jupyter_core @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_73nomeum4p/croot/jupyter_core_1718818302815/work
+kaggle==1.6.14
+kiwisolver==1.4.5
+lxml==5.2.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.0
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+mdurl==0.1.2
+mediapipe==0.10.14
+ml-dtypes==0.4.0
+multidict==6.0.5
+mypy-extensions==1.0.0
+nest-asyncio @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_310vb5e2a0/croot/nest-asyncio_1708532678212/work
+numerize==0.12
 numpy==1.26.4
+opencv-contrib-python==4.10.0.84
+opencv-python==4.10.0.84
+opt-einsum==3.3.0
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1718189413536/work
+pandas==2.1.4
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
+pathspec==0.12.1
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+pillow==10.2.0
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1715777629804/work
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1718047967974/work
+protobuf==3.20.3
+psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1719274593229/work
+PTable==0.9.2
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
+pycparser==2.22
+pydantic==2.5.0
+pydantic_core==2.14.1
+pydicom==2.4.4
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
+PyJWT==2.8.0
+pynrrd==0.4.3
+pyparsing==3.1.2
+python-dateutil @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_66ud1l42_h/croot/python-dateutil_1716495741162/work
+python-dotenv==1.0.0
+python-json-logger==2.0.7
+python-magic==0.4.27
+python-multipart==0.0.5
+python-slugify==8.0.4
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1715024391267/work
+referencing==0.35.1
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.7.1
+rpds-py==0.18.1
+ruff==0.4.10
+scipy==1.13.1
+shapely==2.0.2
+SimpleITK==2.3.1
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+smmap==5.0.1
+sniffio==1.3.1
+sounddevice==0.4.7
+soupsieve==2.5
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+starlette==0.35.1
+stringcase==1.2.0
+supervisely==6.73.116
+text-unidecode==1.3
+tomli==2.0.1
+tornado @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a4w03z48br/croot/tornado_1718740114858/work
+tqdm==4.66.4
+traitlets @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_500m2_1wyk/croot/traitlets_1718227071952/work
+trimesh==3.23.5
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
+tzdata==2024.1
+urllib3==2.2.0
+uvicorn==0.30.1
+uvloop==0.19.0
+varname==0.13.1
+watchfiles==0.22.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+webencodings==0.5.1
+websockets==10.4
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1718013267051/work
